# SQLearn

./: create_db.py  generate_tables.sql  main.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_7.sql  query_8.sql  select.py
alembic/: env.py
conf/: db.py  models.py
seeds/: seed.py
selects/: query_11.sql  query_12.sql  query_3.sql  query_6.sql  query_7.sql  query_9.sql  selects.py
